# pg-stream

./: .gitignore  .gitleaks.toml  .unsafe-baseline  AGENTS.md  CHANGELOG.md  CHECKLIST_0.5.0.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.demo  Dockerfile.ghcr  Dockerfile.hub  Dockerfile.relay  ESSENCE.md  INSTALL.md  META.json  README.md  ROADMAP.md  SECURITY.md  book.toml  codecov.yml  deny.toml  fix_api.py  fix_roadmap.py  fix_scheduler.py  justfile  pg_stream.control  pg_trickle.control  roadmap-description.md
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.semgrep/: pg_trickle.yml
benches/: diff_operators.rs  pgvector_bench.rs  refresh_bench.rs  scheduler_bench.rs
blog/: README.md  append-only-fast-path.md  backup-and-restore.md  built-in-outbox.md  calculated-scheduling.md  circular-dependencies.md  column-level-lineage.md  compliance-audit-trails.md  cost-model-auto-mode.md  cqrs-without-second-database.md  dbt-analytics-stack.md  deploying-rag-at-scale.md  diamond-dependencies.md  differential-dataflow-explained.md  distinct-reference-counting.md  distributed-ivm-citus.md  drain-mode.md  error-budgets.md  event-sourcing-read-models.md  exists-not-exists-delta-rules.md  foreign-table-sources.md  funnel-analysis-cohort-retention.md  grouping-sets-rollup-cube.md  ha-failover-patroni.md  hnsw-recall-distribution-drift.md  hybrid-cdc-mode.md  immediate-mode-zero-lag.md  inbox-pattern-kafka.md  l0-cache-cold-start.md  (+46 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dag_fuzz.rs  sql_builder_fuzz.rs  wal_fuzz.rs
(+717 files in other folders)
