[package]
name = "pg_trickle_fuzz"
version = "0.0.0"
publish = false
edition = "2024"

# Keep fuzz crate out of the parent workspace
[workspace]

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "parser_fuzz"
path = "fuzz_targets/parser_fuzz.rs"
test = false
doc = false

# FUZZ-1 (v0.26.0): Cron parser fuzz target.
[[bin]]
name = "cron_fuzz"
path = "fuzz_targets/cron_fuzz.rs"
test = false
doc = false

# FUZZ-2 (v0.26.0): GUC string→enum coercion fuzz target.
[[bin]]
name = "guc_fuzz"
path = "fuzz_targets/guc_fuzz.rs"
test = false
doc = false

# FUZZ-3 (v0.26.0): CDC trigger payload fuzz target.
[[bin]]
name = "cdc_fuzz"
path = "fuzz_targets/cdc_fuzz.rs"
test = false
doc = false

# FUZZ-4 (v0.39.0): WAL/SQLSTATE error classifier fuzz target (O39-12).
[[bin]]
name = "wal_fuzz"
path = "fuzz_targets/wal_fuzz.rs"
test = false
doc = false

# FUZZ-5 (v0.39.0): DAG/merge SQL / snapshot column-list fuzz target (O39-12).
[[bin]]
name = "dag_fuzz"
path = "fuzz_targets/dag_fuzz.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4"
pg_trickle = { path = "..", features = [] }

[profile.release]
opt-level = 3
debug = true
overflow-checks = true
